atmoz-sftp/other/nostro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nostro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nostro
  template:
    metadata:
      labels:
        app: nostro
    spec:
      containers:
      - name: nostro
        image: your/nostro-image:version
        ports:
        - containerPort: 1521
